# ecommerce-api

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  python-app.yml
alembic/: env.py  script.py.mako
alembic/versions/: 10aba58cccd2_add_category.py  20241121_01_add_is_active_to_categories.py  20251121_02_add_is_available_to_products.py  32a7f1016f1f_add_review.py  355e3e7e2a3b_add_cart_and_cart_item.py  3b7f1a2c4d5e_address_table_refactor.py  3c2f1b7d8e90_add_addresses_table.py  74e055898204_add_review.py  820bf0e032db_add_user.py  9ab6fc8e4143_add_fields_to_user.py  a060ffd43df1_add_product.py  add_order_address_columns.py  c41fb2cb6be4_add_order.py  c8a336be7f92_add_user_role.py  d015a8d51544_add_order_table.py  d234a67acf22_init_db.py  f62339b118bb_init_db.py
app/: main.py
app/api/: deps.py
app/core/: config.py  enums.py  error_handler.py  errors.py  middleware.py  security.py
app/db/: redis.py  session.py
app/models/: __init__.py  address.py  base.py  cart.py  category.py  common.py  order.py  product.py  review.py  user.py
app/schemas/: address.py  cart.py  category.py  common.py  order.py  product.py  review.py  user.py
app/services/: address_service.py  auth_service.py  cart_service.py  category_service.py  email_service.py  order_service.py  product_service.py  review_service.py  user_service.py
tests/: conftest.py  factories.py  test_health.py
tests/end_to_end/: test_auth_routes.py  (+7 more)
(+31 files in other folders)
